field-forms/objects/Form_Template_Snapshot__c/Form_Template_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Renderer-ready JSON snapshot of a Form_Template, chunked across multiple rows so payload size is unbounded. One template's snapshot is N rows, ordered by Payload_Type__c + Chunk_Index__c. See docs/snapshot-v2.md.</description>
    <label>Form Template Snapshot</label>
    <nameField>
        <displayFormat>FTS-{000000}</displayFormat>
        <label>Form Template Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Template Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>