field-forms/objects/Form_Template_Snapshot__c/fields/Chunk_Index__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Index__c</fullName>
    <description>Zero-based ordering of chunks within a (Form_Template, Payload_Type) pair. The renderer concatenates Payload__c values in ascending Chunk_Index__c order to reconstruct the full JSON document.</description>
    <label>Chunk Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>