field-forms/objects/Form_Template_Snapshot__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Composite key of TemplateId|PayloadType|ChunkIndex. Used by NeuraFormLogic to upsert chunks idempotently and avoid orphan rows on partial failure.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>