field-forms/objects/Form_Template_Snapshot__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>One chunk of the renderer-ready JSON. Concatenate Payload__c across all chunks for a given (Form_Template, Payload_Type), ordered by Chunk_Index__c, to reconstruct the full document.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>