field-forms/objects/Form_Template_Snapshot__c/fields/Payload_Type__c.field-meta.xml
<CustomField>
    <fullName>Payload_Type__c</fullName>
    <description>Which slice of the template snapshot this chunk belongs to. The renderer assembles one logical JSON document per type by concatenating chunks in Chunk_Index__c order.</description>
    <label>Payload Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pages</fullName>
            </value>
            <value>
                <fullName>Sections</fullName>
            </value>
            <value>
                <fullName>Questions</fullName>
            </value>
            <value>
                <fullName>PageConditions</fullName>
                <label>Page Conditions</label>
            </value>
            <value>
                <fullName>SectionConditions</fullName>
                <label>Section Conditions</label>
            </value>
            <value>
                <fullName>QuestionConditions</fullName>
                <label>Question Conditions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>