field-forms/objects/Form_Template_Snapshot__c/fields/Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>Schema_Version__c</fullName>
    <description>Semantic version of the snapshot payload format. Lets readers detect format migrations without coordinating a synchronous backfill. Current writers emit "v2.0".</description>
    <label>Schema Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>